# django-sessionprofile

./: .bumpversion.cfg  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: Makefile  conf.py  index.rst  make.bat  quickstart.rst
docs/examples/: index.rst
docs/examples/phpBB3/: 3.0.x.rst
sessionprofile/: __init__.py  apps.py  compat.py  middleware.py  models.py  settings.py  signals.py
sessionprofile/backends/: __init__.py  base.py  db.py
sessionprofile/management/commands/: sp_clear_expired.py
sessionprofile/migrations/: 0001_initial.py
testapp/: settings.py  urls.py  views.py
tests/: conftest.py  factories.py  manage.py  mock.py  settings.py  test_base_backend.py  test_db_backend.py  test_management_commands.py  urls.py  views.py
tests/tests/: factories.py  mock.py  test_base_backend.py  test_db_backend.py  test_management_commands.py  test_misc.py
