# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-sessionprofile
version = 1.0
description = Keep track of Django user sessions
long_description = file: README.rst
url = https://github.com/modelbrouwers/django-sessionprofile
project_urls =
    Documentation = http://django-sessionprofile.readthedocs.io/en/latest/
    Changelog = https://github.com/modelbrouwers/django-sessionprofile/blob/main/CHANGELOG.rst
    Bug Tracker = https://github.com/modelbrouwers/django-sessionprofile/issues
    Source Code = https://github.com/modelbrouwers/django-sessionprofile
license = MIT
author = Sergei Maertens
author_email = sergei@modelbrouwers.nl
keywords = django, session, user
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2
tests_require =
    pytest
    pytest-django
    factory-boy
    tox
    isort
    black
    flake8

[options.packages.find]
include =
    sessionprofile
    sessionprofile.*

[options.extras_require]
tests =
    pytest
    pytest-django
    factory-boy
    tox
    isort
    black
    flake8
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=sessionprofile
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE=testapp.settings
testpaths = tests

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc

[coverage:run]
branch = True
source = sessionprofile

[coverage:report]
omit = */migrations/*,*/tests/*
exclude_lines =
    pragma: no cover,
    noqa
